# Py2Py_browser

./: .coverage  .flake8  .gitignore  README.md  config.py  count.py  enc_dec_test.py  enc_test.py  main.py  pyproject.toml  requirements.txt  run_browser_standalone.py  run_files_server_standalone.sh  run_server_standalone.py  run_social_standalone.py  run_tests.sh  setup.sh  test_server.py
.cursor/: mcp.json
browser/: browser.py  handle_route.py  run_browser.py
browser/utils/: check_communication.py  hash_req_res.py  on_framenavigated.py  on_page.py
communication/: communication.py  communication_user.py  message.py
communication/concurrency_layers/: __init__.py  (+3 more)
config/: __init__.py  browser_config.py  communication_config.py  db_config.py  debugging_config.py  encryption_config.py  files_config.py  global_config.py  logging_config.py  p2p_config.py  server_config.py  social_config.py
db/: __init__.py  asset_hints.py  assets.py  group_members.py  groups.py  peers.py  stored_asset_hashes.py  stored_asset_parts.py
debugging/: add_groups.py  add_peers.py  purge_data.py
encryption/: add_bundle_to_store.py  add_new_peer_bundle.py  decrypt_message.py  encrypt_message.py  generate_empty_store.py  generate_own_bundle.py  generate_peer_bundle.py  generate_peer_store.py  initialize_encryption.py
file_upload/: upload_files.py  upload_media.py
files/: load_req_from_disk.py  store_res_to_disk.py  store_to_disk.py
p2p/: request_hashes.py  server.py  validate_stored_asset.py
social/: run_social.py
utils/: hash_str.py  remove_tasks_forever.py  upload_files.py
(+87 files in other folders)
