[project]
name = "p2py-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "bson>=0.5.10",
    "cryptography>=45.0.4",
    "kivy[full]>=2.3.1",
    "numpy>=2.3.1",
    "playwright>=1.52.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "qrcode>=8.2",
    "signal-protocol>=0.2.2",
    "sortedcontainers>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.41",
]
